--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
+	<!--<body class="is-preload"> -->
 	<body class="is-preload">
 
 		<!-- Wrapper -->
-			<div id="wrapper" class="fade-in">
+			<!--<div id="wrapper" class="fade-in"> -->
+			<div id="wrapper">
 
 				<!-- Intro -->
 					<div id="intro">
@@ -20,10 +22,11 @@
 								 to craft strategic solutions to business problems, while operating both independently and collaboratively. Eager to utilize my skills 
 								 in data analytics to generate positive outcomes. Connect with me on <a href="https://www.linkedin.com/in/confidence-ojiako-20614418b/">
 									LinkedIn</a> <!--and released for free under the <a href="https://html5up.net/license">Creative Commons --> </a></p>
-							<ul class="actions stacked">
-								<li><a href="https://github.com/Awanieva" class="button big wide smooth-scroll-middle"> VIEW MY GITHUB</a>
+					<!-- <ul class="actions stacked"> -->
+							<ul>
+								<a href="https://github.com/Awanieva" class="button big wide smooth-scroll-middle"> VIEW MY GITHUB</a>
 								<a href="https://drive.google.com/file/d/1viWE4e3YlkbOoJdn9phQI277YYX_V0Gh/view?usp=sharing" 
-								class="button big wide smooth-scroll-middle"> MY RESUME</a></li>
+								class="button big wide smooth-scroll-middle"> MY RESUME</a>
 							</ul> 
 
 						 <!--<a href="https://html5up.net/license"></a>what is this</p> -->
