--- a/powerBI.html
+++ b/powerBI.html
@@ -40,7 +40,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li><a href="index.html">EXCEL</a></li>
+							<li><a href="excel.html">EXCEL</a></li>
 							<li class="active"><a href="powerBI.html">Power BI</a></li>
 							<li><a href="Tableau.html">Tableau</a></li>
 							<li><a href="Sql.html">SQL</a></li>
