--- a/python.html
+++ b/python.html
@@ -95,7 +95,7 @@
 									<header>
 										<h2>FOOD PRODUCTION AND SUPPLY IN AFRICA</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images\Africa Food Supply and Prod.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images\africa.jpg" alt="" /></a>
 									<p>This project aims to tell a story on food shortage in Africa and how it can be resolved by gaining key insights.
 										Also to determine if food production and supply are affected by population.
 										Rice been the most consumed food in Africa. I also used Pearson Correlation Test to determine if rice production in Africa, as a continent, increase as its population rises? <br>
@@ -110,7 +110,7 @@
 										<!-- <span class="date">April 22, 2017</span> -->
 										<h2>AMAZON BEST SELLING BOOK </a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images\amazon.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images\amazonbooks.jpeg" alt="" /></a>
 									<p>In this project, I web-scrapped Amazon best-selling books using Selenium and Beautiful Soup. 
 										I wrangled and analyzed the best selling books from 2009 to 2019. The Aim of this project is to 
 										unravel what type of books were bought frequently, between 2009 and 2019, Also to achieve Data Curation. <br>
