--- a/excel.html
+++ b/excel.html
@@ -25,7 +25,7 @@
 					<!-- <ul class="actions stacked"> -->
 							<ul>
 								<a href="https://github.com/Awanieva" class="button big wide smooth-scroll-middle"> VIEW MY GITHUB</a>
-								<a href="https://drive.google.com/file/d/1IBMCDMLDrwj3-EZnFlCc9qSN7CSlQiRB/view?usp=sharing" 
+								<a href="https://drive.google.com/file/d/1I-vQmvGx3KKKFBBURXp--LB_d-QUvf69/view?usp=drive_link" 
 								class="button big wide smooth-scroll-middle"> MY RESUME</a>
 							</ul> 
 
